# myStockroom

./: .env  .env.dev  .gitignore  .gitignore.backend  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  buildAndTech  celerybeat-schedule  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  dockerfile  package-lock.json  package.json  pytest.ini  reduild.py  requirements.txt
backend/: .dockerignore  .env  .env.dev  .gitignore  .gitignore.backend  .pdm-python  .pre-commit-config.yaml  README.md  docker-compose.yaml  dockerfile  entrypoint.sh  manage.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
backend/accounting/: admin.py  apps.py  forms.py  models.py  routers.py  serializers.py  urls.py  views.py
backend/accounting/templates/accounting/: accounting_detail.html  accounting_index.html  accounting_list.html  categories_list.html
backend/accounting/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
backend/backend/: asgi.py  celery.py  settings.py  urls.py
backend/backend/settings/: __init__.py  deploy.py  production.py
backend/catalog/: admin.py  urls.py  utils.py
backend/catalog/static/css/: styles.css
backend/catalog/templates/: base_generic.html
backend/catalog/tests/: test_login.py  test_urls.py  test_views.py
backend/consumables/: admin.py  forms.py  models.py  resources.py  routers.py  serializers.py  urls.py  views.py
backend/consumables/templates/consumables/: accessories_detail.html  accessories_list.html  consumables_detail.html  consumables_index.html  consumables_list.html
backend/consumables/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
backend/core/: admin.py  serializers.py  urls.py  utils.py  views.py
backend/core/templates/: index.html
backend/core/tests/: test_login.py  test_urls.py
backend/counterparty/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
backend/counterparty/templates/counterparty/: counterparty.html  manufacturer_detail.html  (+1 more)
backend/counterparty/tests/: test_forms.py  test_urls.py  test_views.py
backend/database/Init_db/: init.sql
backend/decommision/: apps.py
backend/decommission/: admin.py  apps.py  decom.py  models.py  resources.py  tasks.py  urls.py  views.py
backend/decommission/templatetags/: decommission_tags.py
backend/decommission/tests/: test_decom.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
backend/device/: admin.py  forms.py  models.py  resources.py  routers.py  serializers.py  urls.py  views.py
backend/device/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
backend/docs/: celery.md  core.md  index.md  starting.md
backend/docs/Accaunting/: App.md  Forms.md  Models.md
backend/docs/Backend/: App.md  celery.md  urls.md
backend/docs/Consumables/: App.md  forms.md
backend/docs/Core/: App.md  Tests.md  Utils.md  Views.md
backend/docs/Counterparty/: App.md  Forms.md  Models.md  Views.md
backend/docs/Decommission/: App.md  decommission.md  resources.md  tasks.md
backend/docs/Device/: App.md  Models.md  forms.md  resources.md
backend/docs/Employee/: App.md  forms.md  models.md
backend/docs/Signature/: models.md
backend/docs/Sofware/: App.md  forms.md  models.md
backend/docs/Stockroom/: App.md  admin.md  context.md  forms.md  resources.md
backend/docs/Workplace/: App.md
backend/employee/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/employee/tests/: test_forms.py  test_urls.py  test_views.py
backend/nginx/: nginx.conf
backend/signature/: admin.py  forms.py  models.py  views.py
backend/signature/tests/: test_models.py  test_urls.py  test_views.py
backend/software/: admin.py  forms.py  models.py  urls.py  views.py
backend/software/tests/: test_models.py  test_urls.py  test_views.py
backend/src/: celerybeat-schedule  manage.py  pytest.ini
backend/src/accounting/: admin.py  apps.py  forms.py  models.py  routers.py  serializers.py  urls.py  views.py
backend/src/backend/: asgi.py  celery.py  urls.py  wsgi.py
backend/src/consumables/: admin.py  apps.py  forms.py  models.py  resources.py  routers.py  serializers.py  urls.py  views.py
backend/src/core/: admin.py  apps.py  urls.py  utils.py  views.py
backend/src/counterparty/: admin.py  apps.py  forms.py  models.py  routers.py  serializers.py  urls.py  views.py
backend/src/decommission/: admin.py  apps.py  decom.py  models.py  resources.py  routers.py  serializers.py  tasks.py  urls.py  views.py
backend/src/device/: admin.py  apps.py  forms.py  models.py  resources.py  routers.py  serializers.py  urls.py  views.py
backend/src/employee/: admin.py  apps.py  forms.py  models.py  routers.py  serializers.py  urls.py  views.py
backend/src/nginx/: nginx.conf
backend/src/signature/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
backend/src/software/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
backend/src/stockroom/: admin.py  apps.py  context_processors.py  forms.py  resources.py  routers.py  serializers.py  urls.py
backend/src/templates/: toast.html
backend/src/workplace/: admin.py  apps.py  forms.py  models.py  routers.py  serializers.py  urls.py  views.py
backend/stockroom/: admin.py  context_processors.py  forms.py  models.py  resources.py  routers.py  stock.py  tasks.py  urls.py  views.py
backend/stockroom/models/: accessories.py  consumables.py  devices.py
backend/stockroom/serializers/: consumables.py  devices.py
backend/stockroom/stock/: base_stock.py  stock.py
backend/stockroom/templatetags/: history_tags.py
backend/stockroom/tests/: test_models.py  test_stock.py  test_tasks.py  test_urls.py  test_view.py  test_views.py
backend/stockroom/views/: accessories.py  consumables.py  devices.py  index.py
backend/templates/Forms/: add.html
backend/templates/registration/: login.html  password_reset_done.html
backend/workplace/: admin.py  apps.py  forms.py  models.py  routers.py  serializers.py  urls.py  views.py
backend/workplace/tests/: test_forms.py  test_urls.py  test_views.py
(+1070 files in other folders)
